# bwf_analysis

./: .env.example
bwf-pipeline/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  setup.sh
bwf-pipeline/alembic/: env.py
bwf-pipeline/alembic/versions/: f27f3dbcd684_initial_schema.py
bwf-pipeline/bwf/: config.py  database.py  models.py  retry.py  scheduler.py
bwf-pipeline/bwf/scrapers/: http.py  matches.py  tournaments.py
bwf-pipeline/tests/: test_scrapers.py
data_schema/: bwf_pipeline_schema.html  bwf_pipeline_schema.mermaid
